--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ hash: SupportTwoFactorAuth
 </a>
 
 <div id="top-header" class="ui center aligned icon header">
-  <i class="circular mobile alternate icon"></i>
+  <div class="logo-wrapper">
+    <img src="img/logo.png">
+  </div>
 
-  <h2>Two Factor Auth (2FA)</h2>
+  <h2>Two Factor Auth</h2>
 
   <div class="sub header">List of websites and whether or not they support
-    <a href="https://en.wikipedia.org/wiki/Two-factor_authentication">2FA</a>.
-  </div>
-  <div class="sub header">
+    <a href="https://en.wikipedia.org/wiki/Two-factor_authentication">2FA</a>.<br>
     Add your own favorite site by submitting a pull request on the
     <a href="{{ site.repo }}">GitHub repo</a>.
   </div>
